force-app/main/default/objects/Authors__c/fields/Old_Country_of_Origin__c.field-meta.xml
<CustomField>
    <fullName>Old_Country_of_Origin__c</fullName>
    <description>Old Country of Origin</description>
    <label>Old Country of Origin</label>
    <length>18</length>
    <type>Text</type>
</CustomField>