force-app/main/default/objects/Authors__c/recordTypes/Foreign_Author.recordType-meta.xml
<RecordType>
    <fullName>Foreign_Author</fullName>
    <active>true</active>
    <label>Foreign Author</label>
</RecordType>