force-app/main/default/objects/Authors__c/recordTypes/Native_Auhtor.recordType-meta.xml
<RecordType>
    <fullName>Native_Auhtor</fullName>
    <active>true</active>
    <label>Native Auhtor</label>
</RecordType>