force-app/main/default/objects/Authors__c/validationRules/checking_author_for_native.validationRule-meta.xml
<ValidationRule>
    <fullName>checking_author_for_native</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.Name ==&apos;Native Auhtor&apos;) &amp;&amp; (TEXT( Country__c ) &lt;&gt; TEXT( Living_Country__c ))</errorConditionFormula>
    <errorMessage>Country of Origin and Living Country should be same</errorMessage>
</ValidationRule>