force-app/main/default/objects/Authors__c/validationRules/checking_the_author_native.validationRule-meta.xml
<ValidationRule>
    <fullName>checking_the_author_native</fullName>
    <active>true</active>
    <description>checking the author native</description>
    <errorConditionFormula>(RecordType.Name==&apos;Foreign Author&apos;)&amp;&amp;(TEXT( Country__c ) == TEXT( Living_Country__c ))</errorConditionFormula>
    <errorMessage>Country of Origin and Living Country should not be same</errorMessage>
</ValidationRule>